# selfmsg-cli

./: Protocol.md  README.md  pyproject.toml
src/mock-server/: server.py
src/selfmsg_cli/: cli.py  client.py  config.py
